--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=progettofinale
+
+jwt.secret=UnaPassphraseMoltoLungaCambialaSubito1234567890
+jwt.expiration-ms=86400000
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/progettofinale
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
